--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-three/drei": "^9.97.6",
+    "@react-three/fiber": "^8.15.16",
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.0.53",
     "ai": "^2.2.35",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
