transitions basic added

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "formidable": "^3.5.1",
+    "framer-motion": "^11.0.5",
     "lucide-react": "^0.330.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.1.0",
