--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
+  },
+  "engines": {
+    "node": ">=21.x"
   }
 }
