--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.340.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.2",
