--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
+    "@next/third-parties": "^14.1.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
@@ -24,7 +25,7 @@
     "framer-motion": "^11.0.5",
     "lucide-react": "^0.340.0",
     "multer": "^1.4.5-lts.1",
-    "next": "14.1.0",
+    "next": "^14.1.3",
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
