--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "canvas": "^2.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "compressorjs": "^1.2.1",
     "formidable": "^3.5.1",
     "framer-motion": "^11.0.5",
     "lucide-react": "^0.340.0",
