--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/third-parties": "^14.1.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.53",
@@ -22,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "compressorjs": "^1.2.1",
+    "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.1",
     "framer-motion": "^11.0.5",
     "lucide-react": "^0.340.0",
@@ -33,7 +35,8 @@
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "vercel": "^33.5.1"
+    "vercel": "^33.5.1",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.58",
